<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            android:elevation="4dp"
            app:titleTextAppearance="@style/TextAppearance.MyTheme.Body1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/app_logo"
                android:tint="@color/color_on_primary"
                android:layout_margin="1dp"
                android:padding="1dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
                android:textColor="@color/normal_white"/>

            <ImageButton
                android:id="@+id/user_profile_picture"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_face_white_24dp"
                android:contentDescription="@string/your_profile"
                android:layout_gravity="end"
                android:background="@color/color_primary"
                android:onClick="profileClicked"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <FrameLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_my_account"
            style="@style/Widget.MyApp.Button"
            android:onClick="deleteUserAccount"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view_settings"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_navigation_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>

