<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:elevation="4dp"
        app:titleTextAppearance="@style/TextAppearance.MyTheme.Body1">

        <ImageButton
            android:id="@+id/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_face_white_24dp"
            android:contentDescription="@string/display_picture"
            android:padding="1dp"
            android:onClick="profileClicked"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="@color/color_on_primary" />

        <ImageButton
            android:id="@+id/arButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ar_location"
            android:src="@drawable/ic_location_on_black_24dp"
            android:padding="1dp"
            android:layout_gravity="end"
            android:background="@color/color_primary" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/message_text_input"
            android:layout_width="0dp"
            android:layout_weight="85"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_gravity="bottom"
            android:hint="@string/messaging_input_hint"
            style="@style/Widget.MyApp.TextInputLayout.Messaging"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messaging_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/message_send_button"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_send_black_24dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:onClick="sendClicked"/>

    </LinearLayout>


</LinearLayout>